[gd_scene load_steps=8 format=3 uid="uid://crf0k4un1wh5m"]

[ext_resource type="Script" uid="uid://0ftjfvwrotvx" path="res://ManholeCover/manhole_cover.gd" id="1_ihuje"]
[ext_resource type="Texture2D" uid="uid://bifcguomsjubs" path="res://ManholeCover/manhole cover animation spritesheet.png" id="2_nbrm4"]

[sub_resource type="Animation" id="Animation_u33t8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_8q8q3"]
resource_name = "open"
length = 0.90001
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pt5b3"]
_data = {
&"RESET": SubResource("Animation_u33t8"),
&"open": SubResource("Animation_8q8q3")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ul6o5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ihuje"]
size = Vector2(20, 2)

[node name="ManholeCover" type="Node2D"]
script = ExtResource("1_ihuje")

[node name="ManholeCoverAnimationSpritesheet" type="Sprite2D" parent="."]
texture = ExtResource("2_nbrm4")
hframes = 9

[node name="AnimationPlayer" type="AnimationPlayer" parent="ManholeCoverAnimationSpritesheet"]
libraries = {
&"": SubResource("AnimationLibrary_pt5b3")
}

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(4, -2)
shape = SubResource("RectangleShape2D_ul6o5")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(4, 9)
shape = SubResource("RectangleShape2D_ihuje")

[connection signal="animation_finished" from="ManholeCoverAnimationSpritesheet/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
